# haskell-src-edit

./: README.md  default.nix  haskell-src-edit.cabal  haskell-src-edit.nix  shell.nix  stack-nix.yaml  stack.yaml
app/: Main.hs
src/Language/Haskell/: Edit.hs
src/Language/Haskell/Edit/: Command.hs  Lang.hs  Result.hs
test/: Spec.hs
